# talaed

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: lib.rs
crates/libs/lib-core/src/model/: error.rs  mod.rs  user.rs
crates/libs/lib-core/src/types/: device_type.rs  education_level.rs  gender.rs  login_status.rs  mod.rs  platform.rs  user.rs
crates/libs/lib-rpc-core/: Cargo.toml
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/handlers/: handlers_login.rs
crates/libs/lib-web/src/middleware/: mw_auth.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: main.rs
crates/services/web-server/src/web/: mod.rs
crates/tools/gen-key/: Cargo.toml
frontend/: Cargo.toml  Trunk.toml  index.html  leptosfmt.toml
frontend/src/: lib.rs  main.rs
frontend/src/components/: avatar.rs  counter_btn.rs  header.rs  mod.rs  siderbar.rs
frontend/src/components/link/: mod.rs
frontend/src/layouts/: main_layout.rs  mod.rs
frontend/src/pages/: home.rs  login.rs  mod.rs  not_found.rs  register.rs
frontend/styles/: globals.css
shared/config/: Cargo.toml
shared/config/src/: lib.rs
shared/error/: Cargo.toml
shared/error/src/: lib.rs
shared/utils/: Cargo.toml
shared/utils/src/: fetch.rs  lib.rs
sql/dev_initial/: 01-create-schema.sql
