[package]
name = "frontend"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
console_log.workspace = true
log.workspace = true
console_error_panic_hook.workspace = true
phosphor-leptos.workspace = true
leptoaster.workspace = true

# utils
strum.workspace = true
strum_macros.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-subscriber-wasm.workspace = true
dotenv.workspace = true

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys.workspace = true

