[package]
name = "talaed-error"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
csv = { workspace = true }
gloo = { workspace = true }
leptos = { workspace = true }
reqwasm = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
serde_json = { workspace = true }
tauri-sys = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
