[package]
name = "lib-auth"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs

lib-utils.workspace = true

# -- Async
tokio.workspace = true

# -- Json
serde.workspace = true

# -- Hashing (pwd-scheme01 & Token)
hmac.workspace = true
sha2.workspace = true
blake3.workspace = true

# -- Hashing (pwd-scheme02)
argon2.workspace = true

# -- Others
uuid.workspace = true
lazy-regex.workspace = true
enum_dispatch.workspace = true
derive_more.workspace = true
