[package]
name = "lib-core"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[features]
with-rpc = ["rpc-router"]

[dependencies]
# -- App Libs
lib-utils.workspace = true
lib-auth.workspace = true

# -- Async
tokio.workspace = true

# -- Json
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

# -- Data
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
modql.workspace = true

# -- Tracing
tracing.workspace = true

# -- Others
uuid.workspace = true
time.workspace = true
derive_more.workspace = true

# -- Feature: with-rpc
rpc-router = { workspace = true, optional = true }

[dev-dependencies]
serial_test = "3"
