[package]
name = "lib-rpc-core"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core", features = ["with-rpc"] }
# -- Async
tokio.workspace = true
futures.workspace = true
# -- Json
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true }
# -- Data
modql = { workspace = true }
# -- Rpc
rpc-router = { workspace = true }
# -- Others
paste.workspace = true
derive_more = { workspace = true }
